--- a/html/02-CSS/assets/css/odev-nav.css
+++ b/html/02-CSS/assets/css/odev-nav.css
@@ -4,16 +4,18 @@ ul {
     list-style-type: none;
     width: 175px;
     /* display: inline-block; */
+    
+    
+     
+    list-style-position: inside;
       
 }
 li{ 
-    
-  
-    /* list-style-type: '🔷'; */
-     
-    list-style-position: inside;
+    list-style-type: '🔷';
+    padding-left: 0;
     background-color: gray;
-     
+     width: 175px;
+     position: relative;
 }
  
 ul li a {
