--- a/html/5-reacjs/trvlcar-frontend/src/components/users/common/testimonals/counters.css
+++ b/html/5-reacjs/trvlcar-frontend/src/components/users/common/testimonals/counters.css
@@ -1,9 +1,9 @@
 .counters{
     position: relative;
-    z-index: 5;
+    z-index:5;
 }
 
 .counters .card{
-background-color: var(--color2);
-text-align: center;
+    background-color: rgba(0, 0, 0, 0.444);
+    text-align: center;
 }
