--- a/html/5-reacjs/trvlcar-frontend/src/components/users/common/testimonals/testimonals.css
+++ b/html/5-reacjs/trvlcar-frontend/src/components/users/common/testimonals/testimonals.css
@@ -3,34 +3,37 @@
     background-repeat: no-repeat;
     background-position: center center;
     background-size: cover;
-    padding: 5rem ;
+    padding:5rem;
     position: relative;
-    color:rgb(209, 205, 205);
+    color: rgb(197, 197, 197);
 }
+
 .testimonals::after{
     content: "";
     position: absolute;
-    top: 0;left: 0;bottom:0;right:0;
+    top:0; left:0;right:0;bottom:0;
     background-color: var(--color2);
     opacity: 0.8;
 }
+
 .testimonals h3{
-    color: rgb(255, 255, 255);
+    color: white;
     position: relative;
     z-index: 10;
-    display:inline-block;
+    display: inline-block;
     margin-bottom: 2rem;
-
 }
-.testimonals h3::after {
-content: "";
-position: absolute;
-left: 0;
-bottom: -5px;
-width:50%;
-height :10px;
-background-color: var(--color1);
-border-radius: 0.2rem;
+
+.testimonals h3::after{
+    content:"";
+    position: absolute ;
+    left:0;
+    bottom:-5px;
+    width:50%;
+    height: 5px;
+    background-color: var(--color1);
+    border-radius: 0.2rem;
+
 }
 
 .swiper-pagination-bullet-active {
