--- a/html/5-reacjs/trvlcar-frontend/src/components/users/common/whyus/whyus.css
+++ b/html/5-reacjs/trvlcar-frontend/src/components/users/common/whyus/whyus.css
@@ -1,15 +1,27 @@
 .whyus ul{
     list-style: none;
-    margin: 0;
+    margin:0;
     padding: 0;
-
-
 }
+
 .whyus li::before{
-    content: "\2022";
-color:var(--color1);
-font-size: 2rem;
-font-weight: bold;
-margin-left:-1rem;
-width: 1rem;
+    content:"\2665";
+    color: var(--color1);
+    font-size: 1.5rem;
+    font-weight: bold;
+    position:absolute;
+    left:0;
+    top:-8px;
+}
+
+.whyus li{
+    font-weight: 400;
+    color: gray;
+    position: relative;
+}
+
+.whyus li span{
+    font-weight: 500;
+    font-size: 1.2rem;
+    color: rgb(96, 96, 96);
 }
